# BigInteger

./: .clang-format  CMakeLists.txt  main.cpp  timer.cpp  timer.h
BigInt/: BigInt.cpp  BigInt.h  BigUInt.cpp  BigUInt.h  BigUIntBase.cpp  BigUIntBase.h  BigUnsignedInt.cpp  BigUnsignedInt.h  DigitVector.cpp  DigitVector.h
Catch_tests/: BigUIntTest.cpp  CMakeLists.txt  catch.hpp
Time/: BenchMark.cpp  BenchMark.h  timer.cpp  timer.h
